[gd_scene load_steps=4 format=3 uid="uid://dxn3wnwixyb2g"]

[ext_resource type="PackedScene" uid="uid://tv2h3m2ukxst" path="res://scenes/levels/PuzzleGrid.tscn" id="1_7j0oh"]
[ext_resource type="Script" uid="uid://dxp3sisfbd2oq" path="res://scripts/puzzle_board/level_editor.gd" id="2_03p3h"]
[ext_resource type="PackedScene" uid="uid://cg4rspaeavpq7" path="res://scenes/objects/PuzzleRule.tscn" id="3_03p3h"]

[node name="PuzzleGrid" instance=ExtResource("1_7j0oh")]
script = ExtResource("2_03p3h")

[node name="Name" parent="CanvasLayer" index="5"]
offset_left = -286.0
offset_top = -247.0
offset_right = 250.0
offset_bottom = -198.0

[node name="NameEditor" type="TextEdit" parent="CanvasLayer" index="6"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -279.0
offset_top = 3.0
offset_right = 257.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_constants/outline_size = 8
placeholder_text = "Level Name Goes Here"

[node name="DescriptionEditor" type="TextEdit" parent="CanvasLayer" index="7"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 310.0
offset_top = 73.0
offset_right = 569.0
offset_bottom = 458.0
grow_horizontal = 2
theme_override_constants/outline_size = 8
placeholder_text = "Description goes here."

[node name="FileName" type="TextEdit" parent="CanvasLayer" index="8"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 310.0
offset_top = 465.0
offset_right = 569.0
offset_bottom = 502.0
grow_horizontal = 2
theme_override_constants/outline_size = 8
placeholder_text = "file_name_goes_here"

[node name="Description" parent="CanvasLayer" index="9"]
offset_left = 754.0
offset_top = 38.0
offset_right = 1004.0
offset_bottom = 462.0

[node name="ResetBack" parent="CanvasLayer" index="10"]
offset_left = -535.0
offset_top = 445.0
offset_right = -346.0
offset_bottom = 505.0

[node name="SubmitBack" parent="CanvasLayer" index="11"]
offset_left = 309.0
offset_top = 6.0
offset_right = 569.0
offset_bottom = 67.0

[node name="PrevBack" parent="CanvasLayer" index="12"]
offset_left = -935.0
offset_top = 522.0
offset_right = -696.0
offset_bottom = 583.0

[node name="NextBack" parent="CanvasLayer" index="13"]
offset_left = 752.0
offset_top = 481.0
offset_right = 937.0
offset_bottom = 542.0

[node name="MenuBack" parent="CanvasLayer" index="14"]
offset_left = -537.0
offset_top = 513.0
offset_right = -341.0
offset_bottom = 619.0

[node name="RulePreviewBack" type="ColorRect" parent="CanvasLayer" index="15"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 66.0
offset_top = -319.0
offset_right = 191.0
offset_bottom = -191.0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="RulePreview" parent="CanvasLayer/RulePreviewBack" index="0" instance=ExtResource("3_03p3h")]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="RulePickerBack" type="ColorRect" parent="CanvasLayer" index="16"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -557.0
offset_top = 145.0
offset_right = -325.0
offset_bottom = 263.0
grow_horizontal = 2

[node name="TypeLabel" type="RichTextLabel" parent="CanvasLayer/RulePickerBack" index="0"]
layout_mode = 0
offset_left = 3.0
offset_top = 1.0
offset_right = 227.0
offset_bottom = 45.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Type"
horizontal_alignment = 1

[node name="TypeLeft" type="Button" parent="CanvasLayer/RulePickerBack/TypeLabel" index="1"]
layout_mode = 0
offset_left = 9.0
offset_top = 5.0
offset_right = 27.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = "<"

[node name="TypeRight" type="Button" parent="CanvasLayer/RulePickerBack/TypeLabel" index="2"]
layout_mode = 0
offset_left = 195.0
offset_top = 5.0
offset_right = 213.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = ">"

[node name="VariantLabel" type="RichTextLabel" parent="CanvasLayer/RulePickerBack" index="1"]
layout_mode = 0
offset_left = 3.0
offset_top = 41.0
offset_right = 227.0
offset_bottom = 85.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Variant"
horizontal_alignment = 1

[node name="VariantLeft" type="Button" parent="CanvasLayer/RulePickerBack/VariantLabel" index="1"]
layout_mode = 0
offset_left = 32.0
offset_top = 5.0
offset_right = 50.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = "<"

[node name="VariantFarLeft" type="Button" parent="CanvasLayer/RulePickerBack/VariantLabel" index="2"]
layout_mode = 0
offset_top = 5.0
offset_right = 27.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = "<<"

[node name="VariantRight" type="Button" parent="CanvasLayer/RulePickerBack/VariantLabel" index="3"]
layout_mode = 0
offset_left = 172.0
offset_top = 5.0
offset_right = 190.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = ">"

[node name="VariantFarRight" type="Button" parent="CanvasLayer/RulePickerBack/VariantLabel" index="4"]
layout_mode = 0
offset_left = 194.0
offset_top = 5.0
offset_right = 221.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = ">>"

[node name="ColorLabel" type="RichTextLabel" parent="CanvasLayer/RulePickerBack" index="2"]
layout_mode = 0
offset_left = 3.0
offset_top = 77.0
offset_right = 227.0
offset_bottom = 121.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Color"
horizontal_alignment = 1

[node name="ColorLeft" type="Button" parent="CanvasLayer/RulePickerBack/ColorLabel" index="1"]
layout_mode = 0
offset_left = 9.0
offset_top = 5.0
offset_right = 27.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = "<"

[node name="ColorRight" type="Button" parent="CanvasLayer/RulePickerBack/ColorLabel" index="2"]
layout_mode = 0
offset_left = 195.0
offset_top = 5.0
offset_right = 213.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = ">"

[node name="BoardChangerBack" type="ColorRect" parent="CanvasLayer" index="17"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -556.0
offset_top = 280.0
offset_right = -324.0
offset_bottom = 438.0
grow_horizontal = 2

[node name="DimensionLabel" type="RichTextLabel" parent="CanvasLayer/BoardChangerBack" index="0"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 3.0
offset_top = -7.0
offset_right = 227.0
offset_bottom = 37.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "4 x 4"
horizontal_alignment = 1

[node name="WidthLabel" type="RichTextLabel" parent="CanvasLayer/BoardChangerBack" index="1"]
layout_mode = 0
offset_left = 3.0
offset_top = 28.0
offset_right = 227.0
offset_bottom = 72.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Width"
horizontal_alignment = 1

[node name="WidthLeft" type="Button" parent="CanvasLayer/BoardChangerBack/WidthLabel" index="1"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 28.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = "<"

[node name="WidthRight" type="Button" parent="CanvasLayer/BoardChangerBack/WidthLabel" index="2"]
layout_mode = 0
offset_left = 195.0
offset_top = 5.0
offset_right = 213.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = ">"

[node name="HeightLabel" type="RichTextLabel" parent="CanvasLayer/BoardChangerBack" index="2"]
layout_mode = 0
offset_left = 3.0
offset_top = 66.0
offset_right = 227.0
offset_bottom = 110.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Height"
horizontal_alignment = 1

[node name="HeightLeft" type="Button" parent="CanvasLayer/BoardChangerBack/HeightLabel" index="1"]
layout_mode = 0
offset_left = 9.0
offset_top = 5.0
offset_right = 27.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = "<"

[node name="HeightRight" type="Button" parent="CanvasLayer/BoardChangerBack/HeightLabel" index="2"]
layout_mode = 0
offset_left = 195.0
offset_top = 5.0
offset_right = 213.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = ">"

[node name="ColorLimitLabel" type="RichTextLabel" parent="CanvasLayer/BoardChangerBack" index="3"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 3.0
offset_top = 107.0
offset_right = 227.0
offset_bottom = 151.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 30
text = "Colors: 1"
horizontal_alignment = 1

[node name="ColorCountLeft" type="Button" parent="CanvasLayer/BoardChangerBack/ColorLimitLabel" index="1"]
layout_mode = 0
offset_left = 9.0
offset_top = 5.0
offset_right = 27.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = "<"

[node name="ColorCountRight" type="Button" parent="CanvasLayer/BoardChangerBack/ColorLimitLabel" index="2"]
layout_mode = 0
offset_left = 195.0
offset_top = 5.0
offset_right = 213.0
offset_bottom = 36.0
theme_override_font_sizes/font_size = 16
text = ">"

[node name="SaveBack" type="ColorRect" parent="CanvasLayer" index="18"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 348.0
offset_top = 509.0
offset_right = 533.0
offset_bottom = 570.0
grow_horizontal = 2

[node name="SaveButton" type="Button" parent="CanvasLayer/SaveBack" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -26.5
offset_right = 87.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Save"

[node name="LoadBack" type="ColorRect" parent="CanvasLayer" index="19"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 348.0
offset_top = 579.0
offset_right = 533.0
offset_bottom = 640.0
grow_horizontal = 2

[node name="LoadButton" type="Button" parent="CanvasLayer/LoadBack" index="0"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.5
offset_top = -26.5
offset_right = 87.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Load"

[connection signal="pressed" from="CanvasLayer/RulePickerBack/TypeLabel/TypeLeft" to="." method="_on_type_left_pressed"]
[connection signal="pressed" from="CanvasLayer/RulePickerBack/TypeLabel/TypeRight" to="." method="_on_type_right_pressed"]
[connection signal="pressed" from="CanvasLayer/RulePickerBack/VariantLabel/VariantLeft" to="." method="_on_variant_left_pressed"]
[connection signal="pressed" from="CanvasLayer/RulePickerBack/VariantLabel/VariantFarLeft" to="." method="_on_variant_far_left_pressed"]
[connection signal="pressed" from="CanvasLayer/RulePickerBack/VariantLabel/VariantRight" to="." method="_on_variant_right_pressed"]
[connection signal="pressed" from="CanvasLayer/RulePickerBack/VariantLabel/VariantFarRight" to="." method="_on_variant_far_right_pressed"]
[connection signal="pressed" from="CanvasLayer/RulePickerBack/ColorLabel/ColorLeft" to="." method="_on_color_left_pressed"]
[connection signal="pressed" from="CanvasLayer/RulePickerBack/ColorLabel/ColorRight" to="." method="_on_color_right_pressed"]
[connection signal="pressed" from="CanvasLayer/BoardChangerBack/WidthLabel/WidthLeft" to="." method="_on_width_left_pressed"]
[connection signal="pressed" from="CanvasLayer/BoardChangerBack/WidthLabel/WidthRight" to="." method="_on_width_right_pressed"]
[connection signal="pressed" from="CanvasLayer/BoardChangerBack/HeightLabel/HeightLeft" to="." method="_on_height_left_pressed"]
[connection signal="pressed" from="CanvasLayer/BoardChangerBack/HeightLabel/HeightRight" to="." method="_on_height_right_pressed"]
[connection signal="pressed" from="CanvasLayer/BoardChangerBack/ColorLimitLabel/ColorCountLeft" to="." method="_on_color_count_left_pressed"]
[connection signal="pressed" from="CanvasLayer/BoardChangerBack/ColorLimitLabel/ColorCountRight" to="." method="_on_color_count_right_pressed"]
[connection signal="pressed" from="CanvasLayer/SaveBack/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="CanvasLayer/LoadBack/LoadButton" to="." method="_on_load_button_pressed"]
